compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__const_annotation_wrong_3.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1420
expression: "pub const numbers: List<Int> = [1.1, 2.2, 3.3]"
---
----- SOURCE CODE
pub const numbers: List<Int> = [1.1, 2.2, 3.3]

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:1:32
  │
1 │ pub const numbers: List<Int> = [1.1, 2.2, 3.3]
  │                                ^^^^^^^^^^^^^^^

Expected type:

    List(Int)

Found type:

    List(Float)
